--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,13 @@
 $lff: "Quite Chocolatey";
-$hff:"Montserrat", sans-serif;
-$rclr: #C62314;
-$mclr: #161616;
-$hclr: #130e27;
-@mixin btn ($clr){
-   background: $clr;
-   border: 3px solid $clr;
+$hff: "Montserrat", sans-serif;
+$redColor: #C62314;
+$mainColor: #161616;
+$hColor: #130e27;
+$grey: #eee;
+$darkgrey: #b5b5b5;
+@mixin btn ($xColor){
+   background: $xColor;
+   border: 3px solid $xColor;
    border-radius: 5px;
    color: #fff;
    font-family: $hff;
@@ -14,8 +16,8 @@ $hclr: #130e27;
    padding: 10px 0;
    width: 80%;
    &:hover{
-      background-color: #fff;
-      color: $clr;
+      color: $xColor; 
+      background: #fff;
    }
 }
 @font-face{
@@ -32,10 +34,10 @@ html{
 }
 body{
    font-family: "PT Serif";
-   color: $mclr;
+   color: $mainColor;
 }
 h1{
-   color: $hclr;
+   color: $hColor;
    font-family: $hff;
    font-size: 4.5rem;
    font-weight: 700;
@@ -49,19 +51,24 @@ h2{
    font-size: 2.5rem;
    font-weight: 700;
 }
+h5{
+   font-size: 1.1rem;
+   font-family: $hff;
+   margin-bottom: 30px;
+}
 a{
    color: #fff;
    &:hover{
-      color: $mclr;
+      color: $mainColor;
       text-decoration: none;
    }
    &.active{
-      background-color: $mclr;
-      border: $mclr 1px solid;
+      background-color: $mainColor;
+      border: $mainColor 1px solid;
       border-radius: 5px;
    }
    &.active:hover{
-      color: $rclr;
+      color: $redColor;
    }
 }
 header{
@@ -90,9 +97,9 @@ header{
 .our_services{
    padding: 45px;
    h2{
-      color: $mclr;
+      color: $mainColor;
       span{
-         color: $rclr;
+         color: $redColor;
       }
    }
 }
@@ -124,15 +131,15 @@ header{
    color: #fff;
    font-family: $hff;
    font-size: 1.1rem;
-   background-color: $rclr;
-   border: 3px solid $mclr;
+   background-color: $redColor;
+   border: 3px solid $mainColor;
    border-radius: 5px;
    padding: 25px 75px;
    text-align: center;
 }
 .button_text:hover{ 
-   color: $rclr;
-   border: 3px solid $rclr;
+   color: $redColor;
+   border: 3px solid $redColor;
    background-color: #fff;
 }
 .pricing{
@@ -155,7 +162,7 @@ header{
    padding-top: 30px;
 }
 .card-price{
-   color: $rclr;
+   color: $redColor;
    font-family: $hff;
    font-size: 3rem;
    font-weight: 700;
@@ -166,10 +173,10 @@ header{
    background-repeat: no-repeat;
 }
 .black{
-   @include btn($hclr);
+   @include btn($hColor);
 }
 .red{
-   @include btn($rclr);
+   @include btn($redColor);
 }
 .testimonial{
    padding-top: 60px;
@@ -186,7 +193,7 @@ header{
    margin-bottom: 0;
 }
 .test-sign{
-   color: $hclr;
+   color: $hColor;
    font-family: $hff;
    padding: 20px 0;
 }
@@ -195,14 +202,14 @@ header{
 }
 .grey{
    background: url(img/bg-boy.png) no-repeat left;
-   color: $rclr;
+   color: $redColor;
    padding-top: 20px;
 }
 .gallery{
    padding: 60px 0 40px 70px;
    text-align: center;
    h2{
-      color: $rclr;
+      color: $redColor;
       padding-bottom: 35px;
    }
 }
@@ -218,20 +225,20 @@ header{
    border-radius: 50%;
 }
 .gallery-link{
-   color: $hclr;
+   color: $hColor;
    font-family: $hff;
    text-align: center;
    text-decoration: underline;
 }
 footer{
-   background: $hclr;
+   background: $hColor;
    padding: 50px 0;
 }
 .footer_text{
    color: #fff;
    padding-top: 35px;
    span{
-      color: $rclr;
+      color: $redColor;
    }
 }
 .footer_logo{
@@ -239,11 +246,159 @@ footer{
    font-size: 3.2rem;
    text-align: right;
    a:hover{
-   color: $rclr;
+   color: $redColor;
    }
 }
+.scroll_top {
+   position: fixed;
+   bottom: -50px;
+   right: 20px;
+   width: 50px;
+   height: 50px;
+   border: none;
+   border-radius: 50%;
+   background: $redColor;
+   z-index: 100; 
+   outline: none; 
+   cursor: pointer;
+   transition: 0.4s; 
+}
+.scroll_top:after {
+   content: "";
+   width: 12px;
+   height: 12px;
+   border-top: 2px solid #fff; 
+   border-left: 2px solid #fff; 
+   transform: rotate(45deg); 
+   position: absolute;
+   top: 7px;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   margin: auto;
+}
+.scroll_top.active{
+   bottom: 30px;
+}
+.scroll_top:active, .scroll_top:focus
+{
+   outline: none; 
+}
+.overlay {
+   display: none;
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100vh;
+   background-color: rgba(252,251,249,.7);
+   transition: 350ms ease-in-out;
+   z-index: 5;
+}
+.popup {
+   display: none;
+	position: fixed;
+   width: 400px;
+   height: 520px;
+	top: 110px;
+   right: 80px;
+   padding: 30px 25px;
+   border-radius: 5px;
+   filter: drop-shadow(0.609px 4.963px 19px rgba(137,137,137,0.71));
+   box-sizing: border-box;
+   box-shadow: 3px 3px 2px 0 rgba(0, 0, 0, .2);
+	background-color: #fff;
+   color: $hColor;
+   text-align: center;
+   z-index: 10;
+}
+.visible{
+   display: block;
+}
+.close {
+   cursor: pointer;
+   position: absolute;
+   right: 30px;
+   top: 30px;
+   width: 25px;
+   height: 25px;
+   transform: rotate(0deg);
+   transform-origin: 15px;
+   transition: all 600ms;
+}
+.close:hover {
+   transform: rotate(180deg);
+}
+.close:before, .close:after {
+   position: absolute;
+   left: 15px;
+   content: ' ';
+   height: 25px;
+   width: 3px;
+   background-color: $mainColor;
+}
+.close:before {
+   transform: rotate(45deg);
+}
+.close:after {
+   transform: rotate(-45deg);
+}
+.pop-item{
+   color: $darkgrey;
+   background-color: $grey;
+   border-radius: 5px;
+   line-height: 25px;
+   text-align: left;
+   padding: 15px 20px;
+   margin: 7px 0;
+}
+input{
+   border: none;
+   width: 100%;
+}
+.pop-button{
+   @include btn($redColor);
+   margin-top: 15px;
+   width: 100%;
+}
+.pop-button[disabled], .pop-button[disabled]:hover{
+   background: $redColor;
+   color: #fff;
+   opacity: .5;
+}
 
-
+.btn-2{
+   padding: 1em 3em;
+   border: 3px solid $redColor;
+   transition: all 300ms ease;
+   box-shadow: 0px 4px 10px 2px rgba(black, 0.2);
+   
+  
+   &:before{
+     position: absolute;
+     content: '';
+     width: 0%; height: 100%;
+     background: $redColor;
+     top: 0;  left: auto; right: 0;
+     z-index: -1;
+     transition: all 300ms ease;
+   }
+   
+   &:hover{
+     color: white; 
+     box-shadow:none;
+     &:before{
+       position: absolute;
+       content: '';
+       width: 100%; height: 100%;
+       background: $redColor;
+       top: 0; left: 0; right: 0;
+       z-index: -1;
+     }
+   }
+ }
+ 
+ 
             /* media */
 @media screen and (max-width: 768px){
    h1{
