--- a/style.css
+++ b/style.css
@@ -402,11 +402,11 @@ footer {
   text-align: left;
   padding: 15px 20px;
   margin: 7px 0;
+  width: 100%;
 }
 
 input {
   border: none;
-  width: 100%;
 }
 
 .pop-button {
@@ -431,40 +431,6 @@ input {
   background: #C62314;
   color: #fff;
   opacity: .5;
-}
-
-.btn-2 {
-  padding: 1em 3em;
-  border: 3px solid #C62314;
-  transition: all 300ms ease;
-  box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.2);
-}
-.btn-2:before {
-  position: absolute;
-  content: '';
-  width: 0%;
-  height: 100%;
-  background: #C62314;
-  top: 0;
-  left: auto;
-  right: 0;
-  z-index: -1;
-  transition: all 300ms ease;
-}
-.btn-2:hover {
-  color: white;
-  box-shadow: none;
-}
-.btn-2:hover:before {
-  position: absolute;
-  content: '';
-  width: 100%;
-  height: 100%;
-  background: #C62314;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: -1;
 }
 
 /* media */
@@ -510,10 +476,18 @@ input {
   .footer_logo {
     text-align: center;
   }
+
+  .popup {
+    right: calc((100% - 400px)/2);
+  }
 }
 @media screen and (max-width: 375px) {
   h2 {
     font-size: 2rem;
+  }
+
+  h5 {
+    font-size: 1rem;
   }
 
   .brand {
@@ -523,6 +497,25 @@ input {
   .services {
     padding: 20px;
     text-align: center;
+  }
+
+  .popup {
+    width: 300px;
+    right: calc((100% - 300px)/2);
+    padding-top: 20px;
+  }
+
+  .form-check-input {
+    margin-left: 0;
+  }
+
+  .close {
+    top: 22px;
+    right: 25px;
+  }
+
+  .close:before, .close:after {
+    height: 20px;
   }
 }
 
