--- a/style.scss
+++ b/style.scss
@@ -351,10 +351,10 @@ footer{
    text-align: left;
    padding: 15px 20px;
    margin: 7px 0;
+   width: 100%;
 }
 input{
    border: none;
-   width: 100%;
 }
 .pop-button{
    @include btn($redColor);
@@ -367,39 +367,9 @@ input{
    opacity: .5;
 }
 
-.btn-2{
-   padding: 1em 3em;
-   border: 3px solid $redColor;
-   transition: all 300ms ease;
-   box-shadow: 0px 4px 10px 2px rgba(black, 0.2);
-   
-  
-   &:before{
-     position: absolute;
-     content: '';
-     width: 0%; height: 100%;
-     background: $redColor;
-     top: 0;  left: auto; right: 0;
-     z-index: -1;
-     transition: all 300ms ease;
-   }
-   
-   &:hover{
-     color: white; 
-     box-shadow:none;
-     &:before{
-       position: absolute;
-       content: '';
-       width: 100%; height: 100%;
-       background: $redColor;
-       top: 0; left: 0; right: 0;
-       z-index: -1;
-     }
-   }
- }
- 
  
             /* media */
+
 @media screen and (max-width: 768px){
    h1{
       font-size: 3.5rem;
@@ -434,10 +404,16 @@ input{
    .footer_logo{
       text-align: center;
    }
+   .popup {
+      right: calc((100% - 400px)/2);
+   }
 }
 @media screen and (max-width: 375px){
    h2{
       font-size: 2rem;
+   }
+   h5{
+      font-size: 1rem;
    }
    .brand{
       font-size: 3rem;
@@ -445,5 +421,20 @@ input{
    .services{
       padding: 20px;
       text-align: center;
+   }
+   .popup {
+      width: 300px;
+      right: calc((100% - 300px)/2);
+      padding-top: 20px;
+   }
+   .form-check-input{
+      margin-left: 0;
+   }
+   .close{
+      top: 22px;
+      right: 25px;
+   }
+   .close:before, .close:after {
+      height: 20px;
    }
 }
