--- a/style.css
+++ b/style.css
@@ -258,6 +258,11 @@ header {
 
 .img-round {
   border-radius: 50%;
+  transition: all .5s ease-out;
+}
+
+.img-round:hover {
+  transform: scale(1.3);
 }
 
 .gallery-link {
@@ -368,7 +373,6 @@ footer {
   top: 30px;
   width: 25px;
   height: 25px;
-  transform: rotate(0deg);
   transform-origin: 15px;
   transition: all 600ms;
 }
