--- a/style.scss
+++ b/style.scss
@@ -223,6 +223,10 @@ header{
 }
 .img-round{
    border-radius: 50%;
+   transition: all .5s ease-out;
+}
+.img-round:hover{
+   transform: scale(1.3);
 }
 .gallery-link{
    color: $hColor;
@@ -322,7 +326,6 @@ footer{
    top: 30px;
    width: 25px;
    height: 25px;
-   transform: rotate(0deg);
    transform-origin: 15px;
    transition: all 600ms;
 }
