--- a/style.css
+++ b/style.css
@@ -245,6 +245,13 @@ header {
   color: #C62314;
   padding-bottom: 35px;
 }
+.gallery .img-round {
+  border-radius: 50%;
+  transition: all .5s ease-out;
+}
+.gallery .img-round:hover {
+  transform: scale(1.3);
+}
 
 .gallery-img {
   text-align: right;
@@ -254,15 +261,6 @@ header {
 
 .photo {
   padding: 10px 0;
-}
-
-.img-round {
-  border-radius: 50%;
-  transition: all .5s ease-out;
-}
-
-.img-round:hover {
-  transform: scale(1.3);
 }
 
 .gallery-link {
