--- a/style.css
+++ b/style.css
@@ -247,10 +247,11 @@ header {
 }
 .gallery .img-round {
   border-radius: 50%;
-  transition: all .5s ease-out;
+  transition: all .3s ease-out;
 }
 .gallery .img-round:hover {
-  transform: scale(1.3);
+  transform: scale(1.2);
+  box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.2);
 }
 
 .gallery-img {
