--- a/style.scss
+++ b/style.scss
@@ -214,10 +214,11 @@ header{
    }
    .img-round{
       border-radius: 50%;
-      transition: all .5s ease-out;
+      transition: all .3s ease-out;
    }
    .img-round:hover{
-      transform: scale(1.3);
+      transform: scale(1.2);
+      box-shadow: 5px 5px 7px rgba(0, 0, 0, .2);
    }
 }
 .gallery-img{
