--- a/style.scss
+++ b/style.scss
@@ -250,9 +250,7 @@ footer{
    font-family: $lff;
    font-size: 3.2rem;
    text-align: right;
-   a:hover{
-   color: $redColor;
-   }
+   color: #fff;
 }
 .scroll_top {
    position: fixed;
