--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a.active:hover {
 }
 
 header {
-  background: url(./img/layer1.png) no-repeat center;
+  background: url(img/Layer1.png) no-repeat center;
   background-size: cover;
   padding: 10px 0;
 }
@@ -168,7 +168,7 @@ header {
 }
 
 .popular {
-  background-image: url(./img/popular.png);
+  background-image: url(img/popular.png);
   background-repeat: no-repeat;
 }
 
@@ -293,10 +293,10 @@ footer {
 
 .scroll_top {
   position: fixed;
-  bottom: -55px;
+  bottom: -50px;
   right: 20px;
-  width: 55px;
-  height: 55px;
+  width: 50px;
+  height: 50px;
   border: none;
   border-radius: 50%;
   background: #C62314;
@@ -308,10 +308,10 @@ footer {
 
 .scroll_top:after {
   content: "";
-  width: 15px;
-  height: 15px;
-  border-top: 3px solid #fff;
-  border-left: 3px solid #fff;
+  width: 12px;
+  height: 12px;
+  border-top: 2px solid #fff;
+  border-left: 2px solid #fff;
   transform: rotate(45deg);
   position: absolute;
   top: 7px;
