--- a/style.scss
+++ b/style.scss
@@ -72,7 +72,7 @@ a{
    }
 }
 header{
-   background: url(img/Layer1.png) no-repeat center;
+   background: url(./img/layer1.png) no-repeat center;
    background-size: cover;
    padding: 10px 0;
 }
@@ -169,7 +169,7 @@ header{
    letter-spacing: -1px;
 }
 .popular{
-   background-image: url(img/popular.png);
+   background-image: url(./img/popular.png);
    background-repeat: no-repeat;
 }
 .black{
@@ -201,7 +201,7 @@ header{
    padding-left: 40px;
 }
 .grey{
-   background: url(img/bg-boy.png) no-repeat left;
+   background: url(./img/bg-boy.png) no-repeat left;
    color: $redColor;
    padding-top: 20px;
 }
